@@ -9,3 +9,6 @@ ANNO_VIEWS = 'eea.daviz.config.views'
 ANNO_FACETS = 'eea.daviz.config.facets'
 ANNO_JSON = 'eea.daviz.config.json'
 ANNO_SOURCES = 'eea.daviz.config.sources'
+
+PACKAGE = 'eea.daviz'
+ADD_PERMISSION = "eea.daviz: Add presentation"
