@@ -8,6 +8,7 @@
 
   <include file="profiles.zcml" />
 
+  <include package=".content" />
   <include package=".babel" />
   <include package=".subtypes" />
   <include package=".converter" />
