@@ -1,0 +1,7 @@
+""" Content interfaces
+"""
+from zope.interface import Interface
+
+class IDavizPresentation(Interface):
+    """ Daviz presentation
+    """
