@@ -4,7 +4,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     i18n_domain="eea.daviz">
 
-  <five:registerPackage package="."/>
+  <five:registerPackage package="." initialize=".initialize" />
 
   <genericsetup:registerProfile
       name="default"
