@@ -1,0 +1,49 @@
+<?xml version="1.0"?>
+<object name="DavizPresentation"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title" i18n:translate="">Daviz Presentation</property>
+ <property name="description"
+     i18n:translate="">An announcement that will show up in news listings.</property>
+ <property name="icon_expr">string:${portal_url}/++resource++eea.daviz.images/presentation_icon.png</property>
+ <property name="content_meta_type">DavizPresentation</property>
+ <property name="product">eea.daviz</property>
+ <property name="factory">addDavizPresentation</property>
+ <property name="immediate_view">daviz-edit.html</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types">
+ </property>
+ <property name="allow_discussion">False</property>
+ <property name="default_view">daviz-view.html</property>
+ <property name="view_methods">
+  <element value="daviz-view.html"/>
+ </property>
+ <alias from="(Default)" to="(dynamic view)"/>
+ <alias from="edit" to="atct_edit"/>
+ <alias from="sharing" to="@@sharing"/>
+ <alias from="view" to="(selected layout)"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    url_expr="string:${object_url}" visible="True"
+    i18n:attributes="title">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object"
+    condition_expr="not:object/@@plone_lock_info/is_locked_for_current_user|python:True"
+    url_expr="string:${object_url}/edit" visible="True"
+    i18n:attributes="title">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="History" action_id="history" category="object"
+    condition_expr="" url_expr="string:${object_url}/atct_history"
+    visible="False" i18n:attributes="title">
+  <permission value="ATContentTypes: View history"/>
+ </action>
+ <action title="Edit Exhibit View" action_id="daviz.edit" category="object"
+    condition_expr=""
+    url_expr="string:${object/absolute_url}/daviz-edit.html"
+    visible="True"
+    i18n:attributes="title">
+  <permission value="Modify portal content"/>
+ </action>
+</object>
