@@ -4,7 +4,12 @@ Changelog
 
 4.1 - (unreleased)
 ----------------------
-
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.daviz
+  [voineali #4866]
+* Feature: Added DavizPresentation content-type in order to easy aggregate
+  internal and external exhibit sources
+  [voineali #4866]
 
 4.0-dev - (2011-11-07)
 ----------------------
